2008-01-03  Akim Demaille  <demaille@gostai.com>

	Better PackageInfo use.
	* package-info.hh, package-info.cc (<<): Move into the libport
	name space.
	Report the signature instead of the full contents.
	* program-name.hh: Add CPP guards.

2008-01-01  Akim Demaille  <demaille@gostai.com>

	Fix automake warning.
	* libport/tests/Makefile.am: By shushing automake.

2007-12-25  Akim Demaille  <demaille@gostai.com>

	More sysexits.
	* sysexits.hh (EX_FAIL): New.

2007-12-24  Akim Demaille  <demaille@gostai.com>

	Disable separate (C& c).
	* separator.hh, separator.hxx: use typename, not class.
	Disable unary separate as an attempt to work around some compiler
	limitations.

2007-12-18  Matthieu Nottale  <nottale@gostai.com>

	vc++ headers do not know S_IS_DIR.
	* file-system.cc: Use _S_IFDIR fag instead of IS_DIR macro for vc++.

2007-12-18  Matthieu Nottale  <nottale@gostai.com>

	Define and use ATTRIBUTE_NORETURN.
	* cli.hh: Use ATTRIBUTE_NORETURN.
	* compiler.hh: Define ATTRIBUTE_NORETURN.
	* contract.hh,
	* sysexits.hh: Use ATTRIBUTE_NORETURN.

2007-12-18  Loic Fosse  <fosse@gostai.com>

	Add file-system containing is_dir.
	* Makefile.am, libport-sources.mk: Adjust.
	* file-system.cc, file-system.hh: New.

2007-12-18  Matthieu Nottale  <nottale@gostai.com>

	Replace __noreturn__ with noreturn.
	* cli.hh: __noreturn__->noreturn.
	* contract.hh: Remove duplicate __attribute__ handling code, include
	    compiler.hh.

2007-12-18  Matthieu Nottale  <nottale@gostai.com>

	#define __attribute __declspec for vc++.
	* cli.hh: Put __attribute__ at the beginning of declaration.
	* compiler.hh: define __attribute__ __declspec for vc++.
	* sysexits.cc: Revert my previous patch returning value in noreturn
	  func.
	* sysexits.hh: Put __attribute__ at the beginning of declaration.

2007-12-18  Akim Demaille  <demaille@gostai.com>

	make_tokenizer.
	* tokenizer.hh, tokenizer.cc: New.
	* Makefile.am, libport-sources.mk: Adjust.

2007-12-18  Matthieu Nottale  <nottale@gostai.com>
